refac(front): #3441 home-update-experts
- The text about Hacking Experts on Home has been updated.


Former-commit-id: d2dd915b83cf5243df748954d85626d300d6757d

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -322,9 +322,10 @@
           Since 2001, Fluid Attacks has been developing cybersecurity products
           and providing solutions for clients in industries like technology,
           banking, finance, healthcare, insurance, airlines, and retail.
-          Fluid Attacks’ 70 security experts work closely with organizations to
-          ensure that their systems’ vulnerabilities are recognized and closed
-          at DevOps speed.
+          Fluid Attacks' security experts work closely with organizations
+          to ensure that their systems' vulnerabilities are recognized,
+          with no false positives and no false negatives,
+          and closed at high speed.
         </p>
       </li>
       <li class="pv4">
