refac(front): #3442 contact-change-text
- Some texts on Contact Us page were modified.


Former-commit-id: 08fca9cb906f96e834577fa3acaa73e7b2d5e4e7

--- a/new/theme/2020/templates/contact-us.html
+++ b/new/theme/2020/templates/contact-us.html
@@ -65,19 +65,20 @@
   <div class="tc w-50-l w-100 items-center justify-center flex">
     <div class="pv0-l pv5 ph0-l ph2">
       <h1 class="neue fw7 c-fluid-bk f1-l f-title-s f-title-m ma0">{{ page.title }}</h1>
-      <h2 class="roboto fw1 f4 ma0">Start Solving your Vulnerabilities Now!</h2>
+      <h2 class="roboto fw1 f4 ma0">Find all the vulnerabilities in your system</h2>
     </div>
   </div>
 </div>
 <div class="pb6-ns pb4 mw9 ml-auto mr-auto flex">
   <div class="w-50-l db-l dn">
     <p class="roboto tl fw1 f4 lh-2 mr-auto ml-auto w36-l">
-      Since 2001, <b class="fw7">Fluid Attacks</b> has been developing cybersecurity<br>
-      products and providing solutions for clients in industries like<br>
-      technology, banking, finance, healthcare, insurance, airlines,<br>
-      and retail. Fluid Attacks’ 70 security experts work closely with<br>
-      organizations to ensure that their systems’ vulnerabilities are<br>
-      recognized and closed at DevOps speed.
+      Since 2001, <b class="fw7">Fluid Attacks</b> has been developing technology
+      focused on cybersecurity, offering ethical hacking and pentesting services
+      to companies in the banking, financial, technology, healthcare, insurance,
+      manufacturing, and airline industries, among others.
+      Fluid Attacks' team helps its clients to manage their cybersecurity risks
+      and certify that their systems, which are critical to their operations,
+      are safe for their users.
     </p>
   </div>
   <div class="w-50-l w-100">
