refac(front): #3419 remove location in home page
Former-commit-id: 789711423402aca2a26d8fa8cffa9cd05a375e1e

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -402,11 +402,10 @@
   </div>
   {% include "clients-carousel.html" %}
 </div>
-<div class="asap-bg asap-bg-s coverm cover-s justify-center items-center flex bg-center nb3-m nb5">
+<div class="asap-bg asap-bg-s coverm cover-s justify-center items-center flex bg-center">
   <p class="white f2-ns f3 tc roboto b mv0">
     We Find All Vulnerabilities and Report Them ASAP
   </p>
 
 </div>
-{% include "location.html" %}
 {% endblock content %}
