feat(back): #2140.49 add title tag
- This solves an external linter warning


Former-commit-id: 5fbbf15ce81a00a6d9c9a5f512908087af2058bb

--- a/app/templates/graphic.html
+++ b/app/templates/graphic.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>Graphic</title>
 
     <!-- Include C3 -->
     <link href="{% static 'external/C3/c3-0.7.18/c3.css' %}" rel="stylesheet">
