refac(front): #3446 home-word-replace-order
- There was replacement and exchange of words on Home (Drills).


Former-commit-id: 813dc57f8b1b0e5bd14301a445f2b2db1a901869

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -137,8 +137,8 @@
               <strong class="b">Drills</strong>, through the right combination
               of technology and human intelligence, finds deep and zero-day vulnerabilities
               during the software development life cycle.
-              Forget about false positives and escapes.
-              <strong class="b">Drills</strong> includes SAST, DAST, SCA, and IAST techniques.
+              Forget about false positives and false negatives.
+              <strong class="b">Drills</strong> includes SAST, DAST, IAST, and SCA techniques.
             </p>
           </a>
         </li>
