fix(front): #3420 change text in home
Former-commit-id: 605c24e77304559878fb2e922d6e6a19b3bee69c

--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -52,7 +52,7 @@
 <div class="mw9 center h6 pv5 mv5">
   <div class="tl pl3-l pr0-l">
     <h1 class="c-fluid-bk center roboto w-100 tc ph3-ns ph3 f1-l f2 lh-solid">
-      How Continuous Hacking Works
+      Comprehensive hacking at the speed of your business
     </h1>
   </div>
   <div class="pl3-l pr0-l dib w-100">
