feat(cross): #2140.52 basic forces charts
- This section seems ugly right now, work in progress


Former-commit-id: 905ecf13b27e69a6e503f7b31c2b5c9ef8a70ea2

--- a/front/src/scenes/Dashboard/containers/D3GroupIndicatorsView/index.css
+++ b/front/src/scenes/Dashboard/containers/D3GroupIndicatorsView/index.css
@@ -1,3 +1,7 @@
+:local .centerTitle {
+  text-align: center;
+}
+
 :local .height160 {
   height: 160px;
 }
@@ -8,4 +12,8 @@
 
 :local .height320 {
   height: 320px;
+}
+
+:local .separatorTitleFromCharts {
+  padding-top: 35px;
 }
