refac(front): #3448 change link style
Former-commit-id: fe44572bf8f35aa5efe28571049066679c1c8be9

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -459,10 +459,11 @@ $codeyellow: rgba(230, 219, 116, 1);
   }
 
   a {
+    font-weight: 400;
     text-decoration: none;
-    color: $fluid-gray;
+    color: $fluid-red;
     &:hover {
-      color: $fluid-black;
+      color: none;
     }
   }
 
