rever(front): #3448 change link style
Former-commit-id: 08f472ad64be9e252f163079cdcba8710ea776c1

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -459,11 +459,10 @@ $codeyellow: rgba(230, 219, 116, 1);
   }
 
   a {
-    font-weight: 400;
     text-decoration: none;
-    color: $fluid-red;
+    color: $fluid-gray;
     &:hover {
-      color: none;
+      color: $fluid-black;
     }
   }
 
