feat(front): #2115.8 tooltip on label
- Tooltip is displayed on label, before was showed on content
  of the field


Former-commit-id: e810b9d8db7a17ccd7eef74b00eab7e28579ce8d

--- a/front/src/components/TooltipWrapper/index.css
+++ b/front/src/components/TooltipWrapper/index.css
@@ -1,3 +1,7 @@
+:local .tooltip {
+  z-index: 1100 !important;
+}
+
 :local .tooltip [class$="inner"] {
   background-color: #272727;
   border: 1px solid #272727;
