refac(front): #3424 description in post cards
Former-commit-id: 5a4199abdd350110bccfd98bb40baaee44dff310

--- a/new/theme/2020/templates/index.html
+++ b/new/theme/2020/templates/index.html
@@ -111,7 +111,7 @@ Blog | {{ SITENAME }}
           {% if article.has_summary %}
             {{ article.summary }}
           {% elif article.summary %}
-            {{ article.summary|striptags|truncate(100) }}
+            {{ article.description|striptags|truncate(100) }}
           {% endif %}
         </p>
         <br><br>
