refac(front): #3455 change links style
Former-commit-id: b118fc0a412453c788d50ffcf6a3a881a73c7e97

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -459,10 +459,11 @@ $codeyellow: rgba(230, 219, 116, 1);
   }
 
   a {
+    font-weight: 800;
     text-decoration: none;
-    color: $fluid-gray;
+    color: $fluid-black;
     &:hover {
-      color: $fluid-black;
+      color: $fluid-red;
     }
   }
 
