feat(front): #2140.60 perfectly centered glyph
Former-commit-id: 9e1e559f30b8258633a79d9718c0fe38d6c8bde9

--- a/front/src/graphics/components/Graphic/index.css
+++ b/front/src/graphics/components/Graphic/index.css
@@ -22,3 +22,8 @@
   /* Using important to override the global react-bootstrap style */
   background-color: #fbfbfb !important;
 }
+
+:local .tinyLine {
+  margin: 0;
+  padding: 0;
+}
