--- a/front/src/graphics/components/Graphic/index.css
+++ b/front/src/graphics/components/Graphic/index.css
@@ -1,3 +1,9 @@
+:local .buttonGroup {
+  float: right;
+  position: relative;
+  width: 70px;
+}
+
 :local .frame {
   border-style: none;
   height: 100%;
@@ -26,4 +32,9 @@
 :local .tinyLine {
   margin: 0;
   padding: 0;
+}
+
+:local .titleBar {
+  height: 30px;
+  line-height: 30px;
 }
