feat(front): #2140.64 full screen graphic
![image](/uploads/df420f7fa44178ae9e2e6f5cdb93be61/image.png)
![image](/uploads/80fb8df9b0ccbee3e0f43a3debb46930/image.png)
![image](/uploads/208807b7e40f58e79eb3ead72f86f484/image.png)
![demo](/uploads/fa3719b234cf79d3a7162ab626348480/demo.gif)


Former-commit-id: 460fa2c8a1d6b2fd7d90a05803ee5406cd3f9428

--- a/front/src/graphics/components/Graphic/index.css
+++ b/front/src/graphics/components/Graphic/index.css
@@ -19,6 +19,20 @@
   transform: translate(-50%);
 }
 
+:local .modalDialog {
+  /* 210px is the fixed-sized of the left burger panel */
+  --burger-panel-size: 210px;
+
+  display: inline-block;
+  left: var(--burger-panel-size);
+  max-width: none!important;
+  margin: 0px!important;
+  position: absolute;
+  text-align: left;
+  vertical-align: middle;
+  width: calc(100% - var(--burger-panel-size));
+}
+
 :local .panelTitle {
   /* Using important to override the global react-bootstrap style */
   background-color: #fbfbfb !important;
@@ -27,6 +41,7 @@
 :local .panelFooter {
   /* Using important to override the global react-bootstrap style */
   background-color: #fbfbfb !important;
+  text-align: left;
 }
 
 :local .tinyLine {
@@ -35,6 +50,8 @@
 }
 
 :local .titleBar {
+  font-weight: normal;
   height: 30px;
   line-height: 30px;
+  text-align: left;
 }
