--- a/new/theme/2020/templates/base.html
+++ b/new/theme/2020/templates/base.html
@@ -162,7 +162,7 @@
     {% endblock twitter_card %}
   </head>
   <body class="bg-white ma0 lh-copy">
-    {% assets output="static/js/contentHome.min.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "../node_modules/iframe-resizer/js/iframeResizer.js" %}
+    {% assets output="static/js/contentHome.min.js", "../node_modules/jquery/dist/jquery.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/assets/tipuesearch/tipuesearch.min.js", "../node_modules/iframe-resizer/js/iframeResizer.js", "js/assets/tipuesearch/tipuesearch_set.js" %}
       <script type="text/javascript"
               src="{{ SITEURL }}/{{ ASSET_URL }}"></script>
     {% endassets %}
