--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -33,7 +33,7 @@
               <label for="tipue_search_input"
                     class="search-box-label">
                 <span>
-                  <img class="relative w-search-icon z-2 pointer ph2-l nb2"
+                  <img class="relative w-search-icon z-2 pointer ph2-l"
                       src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/search.svg"
                       alt="Magnifying glass">
                 </span>
