feat(front): #3459 cookie policy link in footer
Former-commit-id: 82542e9b8254b20faa093a42a362a79a143f3aba

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -170,5 +170,10 @@
        href="{{ SITEURL }}/privacy/">
        Privacy Policy
     </a>
+    <span class="c-fluid-gray f6"> - </span>
+    <a class="c-fluid-bk f6 fw2 mt2 roboto no-underline hv-fluid-dkred"
+       href="{{ SITEURL }}/cookie/">
+       Cookie Policy
+    </a>
   </div>
 </div>
