--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -1,10 +1,4 @@
 {% extends "base.html" %}
-
-<!-- Tachyons stylesheet -->
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-
 {% block meta %}
 <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9c4480b4-b8ae-44d8-9c6f-6300b86e9094" data-blockingmode="auto" type="text/javascript"></script>
 <meta name="description"
@@ -223,7 +217,7 @@
         </label>
       </li>
       <li class="ph2 di">
-        <input type="radio" id="op6" class="dn" name="menu2"/>
+        <input type="radio" id="op6" class="dn transparent" name="menu2"/>
         <label class="index6 c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op6">
           One-Shot Hacking
         </label>
