--- a/new/theme/2020/templates/landing.html
+++ b/new/theme/2020/templates/landing.html
@@ -47,7 +47,7 @@
 <div class="mw9 center h6 pv5 mv5">
   <div class="tl pl3-l pr0-l">
     <h1 class="c-fluid-bk center roboto w-100 tc ph3-ns ph3 f1-l f2 lh-solid">
-      Comprehensive hacking at the speed of your business
+      Comprehensive Hacking at the Speed of your Business
     </h1>
   </div>
   <div class="pl3-l pr0-l dib w-100">
