--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -193,42 +193,12 @@
                   Contact
                 </a>
               </li>
-              <div class="aboutus-menu h-maxcontent">
-                <li class="db pb3">
-                  <input class="dn" type="radio" name="menu3" id="careers-title">
-                  <label for="careers-title" class="pointer hv-fluid-rd f3 c-fluid-bk fw3 menu-txt-trans roboto">
-                    Careers <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
-                  </a>
-                  <div class="careers-list pv2 dn">
-                    <ul class="list">
-                      <li class="pv2">
-                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto pv"
-                           href="{{ SITEURL }}/careers/openings/">
-                            Openings
-                        </a>
-                      </li>
-                      <li class="pv2">
-                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
-                           href="{{ SITEURL }}/careers/terms/">
-                            Terms
-                        </a>
-                      </li>
-                      <li class="pv2">
-                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
-                           href="{{ SITEURL }}/careers/knowledge-test/">
-                            Knowledge Test
-                        </a>
-                      </li>
-                      <li class="pv2">
-                        <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
-                           href="{{ SITEURL }}/careers/non-technical-challenges/">
-                            Non-Technical Challenges
-                        </a>
-                      </li>
-                    </ul>
-                  </div>
-                </li>
-              </div>
+              <li class="db pb3">
+                <a href="{{ SITEURL }}/careers/"
+                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
+                  Careers
+                </a>
+              </li>
               <li class="db pb3">
                 <a href="{{ SITEURL }}/faq/"
                    class="hv-fluid-rd f3 c-fluid-bk fw3 no-underline menu-txt-trans roboto">
