fix(front): #3467 footer layout
- Fixed the look of the footer


Former-commit-id: 8ba2c5cba8b9bfea2738fc92a352f1aebea004a9

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -1,10 +1,10 @@
 <div class="mw9 flex-l ml-auto ml-auto mr-auto mb5-l mb5-m mb4 pt4-ns pt2 footer-component">
   <!-- company logo -->
-  <div class="pt1 pt4-l pl2-l w-33-l">
+  <div class="pt1 pt4-l pl2-l w-50-l">
     <div>
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
         alt="Fluid Attacks logo" class="w2-5 fl ml5 pl3 nl3-l mr0-l db-l dn">
-      <div class="ml4-l w6 mr-auto ml-auto tl-l tc">
+      <div class="ml4-l mr-auto ml-auto tl-l tc">
         <p class="c-fluid-bk roboto b f-footer mv0 ml3 db-l dn">Ready to start with Fluid Attacks?</p>
         <span class="c-fluid-bk roboto b f3 mt0 mh2 dn-l db pb4">
           <div class="w2-5 dib"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <div class="pb4 w-70-l w-100 ml0-l tr-l tc db-l dn nowrap overflow-x-auto">
+  <div class="pb4 w-50-l w-100 ml0-l tr-l tc db-l dn nowrap overflow-x-auto">
     <div class="pt4-l b dib v-top tl mh2">
       <div class="lh-2">
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
