feat(front): #2140.77 go live
- no-deltas-check

Closes #2140


Former-commit-id: 70d35a19a6a9cda82982abf4c21235261d18e596

--- a/front/src/scenes/Dashboard/containers/TagContent/TagInfo/index.css
+++ b/front/src/scenes/Dashboard/containers/TagContent/TagInfo/index.css
@@ -1,4 +1,6 @@
 :local .box_size {
-  composes: box_size from '../../IndicatorsView/index.css';
+  max-height: 370px !important;
+  max-width: 370px !important;
+  margin: 0 auto;
   margin-top: 5px;
 }
