refac(front): #3475 change youtube channel link
Former-commit-id: a71174ed2a5b3441f64d984a6b887eb18a31694a

--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -226,7 +226,7 @@
                     <img loading="lazy" class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/linkedin.png"
                       alt="Linkedin logo">
                   </a>
-                  <a class="pr3" href="https://www.youtube.com/user/fluidsignal">
+                  <a class="pr3" href="https://www.youtube.com/c/fluidattacks/">
                     <img loading="lazy" class="grow-large hv-fluid-rd w2 grayscale" src="{{ SITEURL }}/theme/images/social-media/youtube.png"
                       alt="Youtube logo">
                   </a>
