fix(front): #3476 searchbar height
Former-commit-id: 247119bb330bc90d6dce48cf91dd5ed82dc422bd

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -96,7 +96,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .h-banner { height: 15em; }
 .w-banner { width: 20em; }
 .minh-nav { min-height: 5em; }
-.h-search { height: 2.5em; }
+.h-search { height: 2rem; }
 .w6 { width: 19em; }
 .w-products { width: 31.25rem; }
 .w-maxcontent { width: max-content; }
