--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -20,9 +20,9 @@
         </a>
       </li>
         <!-- Searching features -->
-      <div class="relative fr mt-menu mr4 mv4-l pb3-l pv-4-m db-l dn">
+      <div class="relative fr mt-menu mr4 mv4-l pv-bt db-l dn">
         <form action="{{ SITEURL }}/search.html">
-          <div class="search pt2 dib-l roboto v-top">
+          <div class="search dib-l roboto">
             <input type="text"
                   name="q"
                   id="tipue_search_input"
