--- a/new/theme/2020/templates/base.html
+++ b/new/theme/2020/templates/base.html
@@ -177,6 +177,9 @@
         {% endif %}
       {% endfor %}
     {% endblock twitter_card %}
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-PCDDL8T');</script>
+    <!-- End Google Tag Manager -->
   </head>
   <body class="bg-white ma0 lh-copy">
     {% assets output="static/js/contentHome.min.js", "../node_modules/jquery/dist/jquery.js", "js/tmp/contentHome.min.js", "js/tmp/dynClasses.min.js", "js/assets/tipuesearch/tipuesearch.min.js", "../node_modules/iframe-resizer/js/iframeResizer.js", "js/assets/tipuesearch/tipuesearch_set.js" %}
@@ -293,5 +296,8 @@
               async
               src="https://d335luupugsy2.cloudfront.net/js/loader-scripts/587d2441-4eaa-4f2e-b96b-b0a5dcb3fcf3-loader.js" >
       </script>
+    <!-- Google Tag Manager (noscript) -->
+      <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PCDDL8T"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
