refac(front): #3106 styles for the menu
Former-commit-id: b9df3ad635689f45dd337fd22b20b40173900e70

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -189,6 +189,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .mh-100 { max-height: 100%;}
 .ph-10 {padding-right: 10%; padding-left: 10%; }
 .w-search-icon { width: 1.25rem;}
+.minw-menu { min-width: 14rem; }
 
 // Tachyons custom responsive classes
 
