--- a/new/theme/2020/templates/menu.html
+++ b/new/theme/2020/templates/menu.html
@@ -60,7 +60,7 @@
             </label>
           </div>
           <nav class="h-auto tc t-50 ty-50 absolute right-0 left-0 pv4 mh-100">
-            <ul class="o-40 menu-trans dib h-100 list ma0 pa0 relative tl w5">
+            <ul class="o-40 menu-trans dib h-100 list ma0 pa0 relative tl w-auto minw-menu">
               <div class="products-menu h-maxcontent">
                 <li class="db pb3">
                   <input class="dn" type="radio" name="menu3" id="products-title">
@@ -68,7 +68,7 @@
                     Products <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
                   <div class="products-list pv2 dn">
-                    <ul class="list">
+                    <ul class="list bg-graylight">
                       <li class="pv2">
                         <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto pv"
                            href="{{ SITEURL }}/products/integrates/">
@@ -98,7 +98,7 @@
                     Use Cases <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
                   <div class="usecases-list pv2 dn">
-                    <ul class="list">
+                    <ul class="list bg-graylight">
                       <li class="pv2">
                         <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto"
                            href="{{ SITEURL }}/use-cases/continuous-hacking/">
@@ -122,7 +122,7 @@
                     About Us <div class="dib w1"><img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow-down.svg" alt="arrow down"></div></label>
                   </a>
                   <div class="aboutus-list pv2 dn">
-                    <ul class="list">
+                    <ul class="list bg-graylight">
                       <li class="pv2">
                         <a class="hv-fluid-rd f4 c-fluid-bk fw1 no-underline menu-txt-trans roboto pv"
                            href="{{ SITEURL }}/about-us/certifications/">
