--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -128,6 +128,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .forces-bg { background-image: url('../../images/products/forces/forces-cover.png'); }
 .thank-you-bg { background-image: url('../../images/contact-us/bg-thank-you-page.png'); }
 .careers-main-bg { background-image: url('../../images/careers/hero-main-1.png'); }
+.error-bg { background-image: url('../../images/bg-error.png');}
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
 .lower-img { &:hover { transform: scale(1.1);
@@ -186,10 +187,11 @@ $codeyellow: rgba(230, 219, 116, 1);
 .shadowbox-blog { box-shadow: 0px 10px 10px $grayshadow;}
 .hover-card { &:hover {
   box-shadow: 0px 20px 20px $darkshadow; } }
-.mh-100 { max-height: 100%;}
+.mh-100 { max-height: 100%; }
 .ph-10 {padding-right: 10%; padding-left: 10%; }
-.w-search-icon { width: 1.25rem;}
+.w-search-icon { width: 1.25rem; }
 .minw-menu { min-width: 14rem; }
+.f-error { font-size: 10rem; }
 
 // Tachyons custom responsive classes
 
@@ -251,6 +253,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .nl-3 { margin-left: -3rem; }
   .mv-menu { margin-top: 1.875rem; margin-bottom: 1.875rem; }
   .w36-l{ width: 36rem; }
+  .f-error { font-size: 17rem; }
 }
 
 //Very large screens
