feat(front): #3465 new section in the footer
Former-commit-id: a3521163a89bf2e71627a03693dfc3d0b89610eb

--- a/new/theme/2020/templates/footer.html
+++ b/new/theme/2020/templates/footer.html
@@ -1,6 +1,6 @@
-<div class="mw9 flex-l ml-auto ml-auto mr-auto mb5-l mb5-m mb4 pt4-ns pt2 footer-component">
+<div class="mw9 df-l db-ml ml-auto ml-auto mr-auto mb5-l mb5-m mb4 pt4-ns pt2 footer-component">
   <!-- company logo -->
-  <div class="pt1 pt4-l pl2-l w-50-l">
+  <div class="pt1 pt4-l pl2-l w-footer-phrase mh-ml">
     <div>
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/footer-logo.png"
         alt="Fluid Attacks logo" class="w2-5 fl ml5 pl3 nl3-l mr0-l db-l dn">
@@ -31,8 +31,8 @@
       </div>
     </div>
   </div>
-  <div class="pb4 w-50-l w-100 ml0-l tr-l tc db-l dn nowrap overflow-x-auto">
-    <div class="pt4-l b dib v-top tl mh2">
+  <div class="pb4 w-footer-links ml0-footer text-right-l text-center-ml db-l dn nowrap">
+    <div class="pt4-l b dib v-top tl mr2">
       <div class="lh-2">
         <a class="c-fluid-bk f4 roboto fw3 mt0-l no-underline hv-fluid-dkred"
           href="{{ SITEURL }}/products/" >
@@ -142,6 +142,35 @@
         href="{{ SITEURL }}/security/" >
           Security
         </a><br>
+      </div>
+    </div>
+    <div class="pt4-l b dib v-top tl mw-14">
+      <div class="social-media">
+        <a class="pr3 no-underline" href="https://www.instagram.com/fluidattacks/">
+          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-instagram.svg"
+            alt="Instagram logo">
+        </a>
+        <a class="pr3 no-underline" href="https://www.facebook.com/Fluid-Attacks-267692397253577/">
+          <img loading="lazy" class="grow-large hv-fluid-rd w1" src="{{ SITEURL }}/theme/images/social-media/social-facebook.svg"
+            alt="Facebook logo">
+        </a>
+        <a class="pr3 no-underline" href="https://www.linkedin.com/company/fluidattacks/">
+          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-linkedin.svg"
+            alt="Linkedin logo">
+        </a>
+        <a class="pr3 no-underline" href="https://twitter.com/fluidattacks/">
+          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-twitter.svg"
+            alt="Twitter logo">
+        </a>
+        <a class="pr3 no-underline" href="https://www.youtube.com/c/fluidattacks/">
+          <img loading="lazy" class="grow-large hv-fluid-rd w-social" src="{{ SITEURL }}/theme/images/social-media/social-youtube.svg"
+            alt="Youtube logo">
+        </a>
+      </div>
+      <div class="clutch-frame pr3 pt3">
+        <script type="text/javascript" src="https://static1.clutch.co/api/widget.js"></script>
+        <div class="clutch-widget tl" data-url="https://clutch.co" data-widget-type="3" data-height="350"
+        data-clutchcompany-id="488256"></div>
       </div>
     </div>
   </div>
