--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -192,8 +192,25 @@ $codeyellow: rgba(230, 219, 116, 1);
 .w-search-icon { width: 1.25rem; }
 .minw-menu { min-width: 14rem; }
 .f-error { font-size: 10rem; }
+.w-social { width: 1.5rem; }
+.mw-14 { max-width: 14rem; }
 
 // Tachyons custom responsive classes
+@media screen and (min-width: 960px) and (max-width: 1200px) {
+  .w-footer-links { width: auto; }
+  .w-footer-phrase { width: 50% ; }
+  .d-ml { display: block; }
+  .mh-ml { margin-left: auto; margin-right: auto; }
+  .text-center-ml { text-align: center; }
+}
+
+@media screen and (min-width: 1200px) {
+  .w-footer-links { width: 60%; }
+  .w-footer-phrase { width: 40%; }
+  .df-l { display: flex; }
+  .text-right-l { text-align: right; }
+  .ml0-footer { margin-left: 0; }
+}
 
 // Small screens
 @media screen and (max-width: 30em) {
